# roq-kraken-futures

./: .gitignore  .gitmodules  .syntastic_cpp_config  CHANGELOG.md  CMakeLists.txt  Makefile.am  README.md  configure.ac  roq-kraken-futures.pc.in
benchmark/: .gitignore  Makefile.am
conda/: meta.yaml
docker/: Dockerfile  README.md
share/: config.toml
share/flags/prod/: flags.cfg
share/flags/test/: flags.cfg
src/roq/: CMakeLists.txt  Makefile.am
src/roq/kraken-futures/: Makefile.am  application.cpp  application.h  config.cpp  config.h  gateway.cpp  gateway.h  live.sh  main.cpp  options.cpp  options.h  random.cpp  random.h  rest.cpp  rest.h  web_socket.cpp  web_socket.h
src/roq/kraken-futures/config/: kraken-beta.toml
src/roq/kraken-futures/json/: Makefile.am  asset_pairs.json  book_item.json  error.json  event.json  open_positions.json  order.json  own_trades_item.json  parser.cpp  parser.h  ping.json  pong.json  result_field.json  side.json  spread.json  subscription_status.json  time_.json  trade.json  utils.cpp  utils.h
src/roq/kraken_futures/: .gitignore  CMakeLists.txt  Makefile.am  README.md  account.cpp  account.hpp  api.cpp  api.hpp  application.cpp  application.h  application.hpp  authenticator.cpp  authenticator.hpp  beta.sh  config.cpp  config.h  config.hpp  demo.sh  drop_copy.cpp  drop_copy.h  drop_copy.hpp  drop_copy_state.hpp  drop_copy_state.json  flags.cpp  flags.h  flags.hpp  gateway.cpp  gateway.h  gateway.hpp  index.rst  live.sh  main.cpp  market_data.cpp  market_data.h  market_data.hpp  options.cpp  options.h  order_entry.cpp  order_entry.h  order_entry.hpp  (+24 more)
src/roq/kraken_futures/config/: kraken-beta.toml  kraken-futures-demo.toml  kraken-futures.toml  kraken.toml
src/roq/kraken_futures/fix_bridge/: .gitignore  application.cpp  application.hpp  config.hpp  live.sh  main.cpp  settings.cpp  settings.hpp
src/roq/kraken_futures/flags/: .gitignore  CMakeLists.txt  common.json  download.json  flags.json  misc.json  request.json  rest.json  settings.cpp  settings.hpp  ws.json
src/roq/kraken_futures/gateway/: CMakeLists.txt  account.cpp  account.hpp  api.cpp  api.hpp  config.cpp  config.hpp  controller.cpp  controller.hpp  drop_copy.cpp  drop_copy.hpp  market_data.cpp  market_data.hpp  order_entry.cpp  order_entry.hpp  rest.cpp  rest.hpp  settings.hpp  shared.cpp  shared.hpp
src/roq/kraken_futures/json/: .gitignore  CMakeLists.txt  README.md  account_balances_and_margins.json  add_order_status.json  alert.json  asset_pairs_item.json  assets.json  assets_item.json  book.json  book_item.json  book_snapshot.json  cancel_all_after_ack.json  cancel_all_after_ack_status.json  cancel_all_orders.json  cancel_all_status.json  cancel_order.json  cancel_order_status.json  cancel_status.json  candles.json  candles_item.json  challenge.json  channel.json  edit_order.json  edit_status.json  encoder.cpp  encoder.hpp  error.json  event.json  feed.json  fill.json  fill_type.json  fills.json  fills_snapshot.json  heartbeat.json  info.json  instrument_type.json  instruments.json  instruments_item.json  map.cpp  (+57 more)
src/roq/kraken_futures/protocol/json/: .gitignore  CMakeLists.txt  account_balances_and_margins.json  alert.json  book.json  book_item.json  book_snapshot.json  cancel_all_after_ack.json  cancel_all_after_ack_status.json  cancel_all_orders.json  cancel_all_status.json  cancel_order.json  cancel_status.json  candles.json  candles_item.json  challenge.json  edit_order.json  edit_status.json  encoder.cpp  encoder.hpp  error.json  event.json  feed.json  fill.json  fill_type.json  fills.json  fills_snapshot.json  heartbeat.json  info.json  instrument_type.json  instruments.json  instruments_item.json  map.cpp  map.hpp  margin_account.json  margin_account_type.json  open_orders.json  open_orders_snapshot.json  open_positions.json  option_type.json  (+28 more)
src/roq/kraken_futures/test/: .gitignore  CMakeLists.txt  crypto.cpp  json_account_balances_and_margins.cpp  json_book.cpp  json_book_snapshot.cpp  json_cancel_all_orders.cpp  json_cancel_order.cpp  json_edit_order.cpp  json_fills.cpp  json_fills_snapshot.cpp  json_instruments.cpp  json_instruments_item.cpp  json_margin_account.cpp  json_open_orders.cpp  json_open_orders_snapshot.cpp  json_open_positions.cpp  json_order.cpp  json_rest_error.cpp  json_send_order.cpp  json_ticker.cpp  json_trade.cpp  json_trade_snapshot.cpp
src/roq/kraken_futures/tools/: crypto.cpp  crypto.hpp  hasher.cpp  hasher.h  hasher.hpp
test/: .gitignore  CMakeLists.txt  Makefile.am  crypto.cpp  hasher.cpp  json_account_balances_and_margins.cpp  json_book.cpp  json_book_snapshot.cpp  json_cancel_all_orders.cpp  json_cancel_all_orders_ack.cpp  json_cancel_order.cpp  json_create_order_ack.cpp  json_edit_order.cpp  json_fills.cpp  json_fills_snapshot.cpp  json_instruments.cpp  json_instruments_item.cpp  json_margin_account.cpp  json_open_orders.cpp  json_open_orders_snapshot.cpp  json_open_positions.cpp  json_order.cpp  json_rest_error.cpp  json_send_order.cpp  json_ticker.cpp  json_trade.cpp  json_trade_snapshot.cpp  json_trades.cpp
